--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
-    <title>Portfolio | Jigar Sable</title>
+    <link id='favicon' rel="shortcut icon" href="https://drive.google.com/file/d/1IuerumO-jHHoo4DqcEEdOLoraQwHUEXR/view?usp=drive_link" type="image/x-png">
+    <title>My Portfolio | Furqnwww</title>
 </head>
 <body oncontextmenu="return false">
 
@@ -23,7 +23,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Furqon</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -32,7 +32,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#work">Work</a></li>
+            <li><a href="#work">Portofolio</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
@@ -46,19 +46,19 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/> I'm Jigar <span>Sable</span></h2>
+    <h2>Hi There,<br/> I'm Furqon <span>Widaya</span></h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/jigar-sable/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/jigar-sable" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/jigar_sable" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-dev"></i></a></li>
+          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/furqon-aji-widaya-672189194/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+          <li><a class="github" aria-label="GitHub" href="https://github.com/FurqonWidaya" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/fushiwayda" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a class="telegram" aria-label="Telegram" href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/furqnwww"><i class="fab fa-instagram" target="_blank"></i></a></li>
+         <!--  <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-dev"></i></a></li> -->
         </ul>
       </div>
     </div>
@@ -80,9 +80,9 @@
     </div>
     <div class="content">
         <h3>I'm Jigar</h3>
-        <span class="tag">Full Stack Developer</span>
+        <span class="tag">Web Developer</span>
         
-        <p>I am a Full-Stack developer based in Pune, India. 
+        <p>I am a Web developer.
           I am an Information Technology undergraduate from SPPU.
           I am very passionate about improving my coding skills & developing applications & websites.
           I build WebApps and Websites using MERN Stack.
@@ -95,8 +95,8 @@
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> jigarsable21@gmail.com</p>
-              <p><span> place : </span> Pune, India - 412206</p>
+              <p><span> email : </span> Furqonwidaya@gmail.com</p>
+              <p><span> place : </span> Jember, Jawa Timur - Indonesia</p>
             </div>
         </div>
         
