--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
     <link id='favicon' rel="shortcut icon" href="https://drive.google.com/file/d/1IuerumO-jHHoo4DqcEEdOLoraQwHUEXR/view?usp=drive_link" type="image/x-png">
     <title>My Portfolio | Furqnwww</title>
@@ -45,8 +44,8 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>I'm Furqon Aji<span>Widaya</span></h2>
-    <p>i am into <span class="typing-text"></span></p>
+    <h2>I'm Furqon Aji<span> Widaya</span></h2>
+    <p>Saya Memiliki minat pada <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
     </a>
@@ -78,7 +77,7 @@
         <img draggable="false" class="tilt" src="./assets/images/profile2.jpg" alt="">
     </div>
     <div class="content">
-        <h3>I'm Jigar</h3>
+        <h3>I'm Furqon Aji Widaya</h3>
         <span class="tag">Web Developer</span>
         
         <p>I am a Web developer.
