--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>I'm Furqon Aji<span> Widaya</span></h2>
+    <h2>I'm Furqon Aji Widaya</h2>
     <p>Saya Memiliki minat pada <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
