--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
     </div>
      <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/filegenerate.PNG" alt="" />
+      <img draggable="false" src="../assets/images/projects/filegenerate.PNG" alt="" />
       <div class="content">
         <div class="tag">
         <h3>File Generator</h3>
@@ -209,7 +209,7 @@
         <div class="desc">
           <p>Web Development</p>
           <div class="btns">
-            <a href="https://mocmembership.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/Project_File_Generator" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -224,7 +224,7 @@
         <div class="desc">
           <p>Web Development</p>
           <div class="btns">
-            <a href="https://mocmembership.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/DevT-Brain-Corp/Webber" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -239,7 +239,7 @@
         <div class="desc">
           <p>Web Development</p>
           <div class="btns">
-            <a href="https://mocmembership.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/dimpurw/KOSIN" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -254,7 +254,7 @@
         <div class="desc">
           <p>Web Development</p>
           <div class="btns">
-            <a href="https://mocmembership.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/cleaningart" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
