--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
     </div>
      <div class="box tilt">
-      <img draggable="false" src="../assets/images/projects/filegenerate.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/filegenerate.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>File Generator</h3>
@@ -216,7 +216,7 @@
       </div>
     </div>
      <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/webber.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/webber.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>WEBBER</h3>
