--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <span class="tag">Web Developer</span>
         
         <p>I am Furqon Aji Widaya, final semester student majoring in Information Systems, Computer Science, University
-    Jember. I have experience and interest in Website Development and Machine Learning. I
-      has a career interest in the Data Analytics industry and web developer. </p>
+    Jember. I have experience and interest in Website Development and Data Science. I
+      have a career interest in Data Analytics and Web Development. </p>
         
         <div class="box-container">
             <!-- <div class="box">
