--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
         <h3>SI FORECASTING</h3>
         </div>
         <div class="desc">
-          <p>Web Development</p>
+          <p>[Web Development]</p>
+            <p>Sebuah sistem aplikasi yang dikerjakan dalam projek tugas akhir skripsi yang berfungsi untuk meramalkan permintaan karet dan pengelolaan karet</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Ndfwvk03AC9VbJeCAz2xK1P943sy_EB5/view?usp=sharing/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/SIPPP" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -207,6 +208,7 @@
         </div>
         <div class="desc">
           <p>Web Development</p>
+            <p>Sebuah aplikasi yang menyediakan layanan jual beli produk dan courses biasanya untuk agen karena harus menjadi member dahulu untuk membeli produk</p>
           <div class="btns">
             <a href="https://mocmembership.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/DevT-Brain-Corp/moc2" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -222,6 +224,7 @@
         </div>
         <div class="desc">
           <p>Web Development</p>
+            <p>Simple app untuk digunakan membantu dalam pengelolaan pembuatan surat yang banyak untuk menghemat waktu</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1mfXDlSSN2y3MnqwejQmJGIjwHAiY6BIr/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/Project_File_Generator" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -237,6 +240,7 @@
         </div>
         <div class="desc">
           <p>Web Development</p>
+            <p>Sistem yang menawarkan tempat untuk menjual produk dengan tampilan seperti website milik sendiri.</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1POjradFE6AAa8Zlhuoz3soRjB7CMY-Uu/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/DevT-Brain-Corp/Webber" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -252,6 +256,8 @@
         </div>
         <div class="desc">
           <p>Web Development</p>
+            <p>Sistem yang dibuat untuk memenuhi projek mata kuliah. SPPK KOSIN adalah sistem penunjang keputusan untuk membantu mencari kosan
+                yang memenuhi krtiteria terbaik bagi pengguna</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Dy2X2TBUewY29_bxKW2ghrXH1acKUpU-/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/dimpurw/KOSIN" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -267,6 +273,10 @@
         </div>
         <div class="desc">
           <p>Web Development</p>
+            <P>projek mata kuliah yang mengembangkan Sistem yang mana dibuat untuk membantu master(pengguna app-pemesan) dalam mengerjakan pekerjaan rumah. 
+                CLEANING ART adalah suatu sistem informasi bidang usaha yang memberikan pelayanan
+terhadap majikan atau pengguna jasa ART berbasis website. Semua kalangan masyarakat bisa
+mengaksesnya, tetapi dikhususkan untuk majikan yang membutuhkan pekerja ART. </P>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Dy2X2TBUewY29_bxKW2ghrXH1acKUpU-/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/cleaningart" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
