--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <div class="box-container">
     <div class="box tilt">
-      <img draggable="false" src="https://drive.google.com/file/d/1BXvcKGxuv8gFAUlODF3Z6zybMQI7Og_t/view?usp=sharingg" alt="" />
+      <img draggable="false" src="https://drive.google.com/uc?id=1BXvcKGxuv8gFAUlODF3Z6zybMQI7Og_t&export=view" alt="" />
       <div class="content">
         <div class="tag">
         <h3>SI FORECASTING</h3>
