--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </div>
     </div>
      <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/cleaningart.png" alt="" />
+      <img draggable="false" src="https://drive.google.com/uc?id=1T5duDC98Uu1CU0Z1901VW-FVFV0WCdU9&export=view" alt="" />
       <div class="content">
         <div class="tag">
         <h3>CleaningART</h3>
@@ -275,8 +275,7 @@
           <p>Web Development</p>
             <P>projek mata kuliah yang mengembangkan Sistem yang mana dibuat untuk membantu master(pengguna app-pemesan) dalam mengerjakan pekerjaan rumah. 
                 CLEANING ART adalah suatu sistem informasi bidang usaha yang memberikan pelayanan
-terhadap majikan atau pengguna jasa ART berbasis website. Semua kalangan masyarakat bisa
-mengaksesnya, tetapi dikhususkan untuk majikan yang membutuhkan pekerja ART. </P>
+terhadap majikan atau pengguna jasa ART berbasis website. </P>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Dy2X2TBUewY29_bxKW2ghrXH1acKUpU-/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/cleaningart" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
