--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <h3>SI FORECASTING</h3>
         </div>
         <div class="desc">
-          <p>[Web Development]</p>
+          <p>[Web Development - Back End]</p>
             <p>Sebuah sistem aplikasi yang dikerjakan dalam projek tugas akhir skripsi yang berfungsi untuk meramalkan permintaan karet dan pengelolaan karet</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Ndfwvk03AC9VbJeCAz2xK1P943sy_EB5/view?usp=sharing/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
@@ -207,7 +207,7 @@
         <h3>Master Online Comunnity (Revisi)</h3>
         </div>
         <div class="desc">
-          <p>Web Development</p>
+          <p>[Web Development - System Support]</p>
             <p>Sebuah aplikasi yang menyediakan layanan jual beli produk dan courses biasanya untuk agen karena harus menjadi member dahulu untuk membeli produk</p>
           <div class="btns">
             <a href="https://mocmembership.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
@@ -223,7 +223,7 @@
         <h3>File Generator</h3>
         </div>
         <div class="desc">
-          <p>Web Development</p>
+          <p>[Web Development - Full Stack]</p>
             <p>Simple app untuk digunakan membantu dalam pengelolaan pembuatan surat yang banyak untuk menghemat waktu</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1mfXDlSSN2y3MnqwejQmJGIjwHAiY6BIr/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
@@ -239,7 +239,7 @@
         <h3>WEBBER</h3>
         </div>
         <div class="desc">
-          <p>Web Development</p>
+          <p>[Web Development - Full Stack]</p>
             <p>Sistem yang menawarkan tempat untuk menjual produk dengan tampilan seperti website milik sendiri.</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1POjradFE6AAa8Zlhuoz3soRjB7CMY-Uu/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
@@ -255,7 +255,7 @@
         <h3>SPPK KOSIN</h3>
         </div>
         <div class="desc">
-          <p>Web Development</p>
+          <p>[Web Development - Back End]</p>
             <p>Sistem yang dibuat untuk memenuhi projek mata kuliah. SPPK KOSIN adalah sistem penunjang keputusan untuk membantu mencari kosan
                 yang memenuhi krtiteria terbaik bagi pengguna</p>
           <div class="btns">
@@ -272,7 +272,7 @@
         <h3>CleaningART</h3>
         </div>
         <div class="desc">
-          <p>Web Development</p>
+          <p>[Web Development - Full Stack]</p>
             <P>projek mata kuliah yang mengembangkan Sistem yang mana dibuat untuk membantu master(pengguna app-pemesan) dalam mengerjakan pekerjaan rumah. 
                 CLEANING ART adalah suatu sistem informasi bidang usaha yang memberikan pelayanan
 terhadap majikan atau pengguna jasa ART berbasis website. </P>
