--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
         <div class="desc">
           <p>[Web Development - System Support]</p>
-            <p>Sebuah aplikasi yang menyediakan layanan jual beli produk dan courses biasanya untuk agen karena harus menjadi member dahulu untuk membeli produk</p>
+            <p>Sebuah aplikasi membership yang menyediakan layanan jual beli produk dan coursesk</p>
           <div class="btns">
             <a href="https://mocmembership.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/DevT-Brain-Corp/moc2" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -256,8 +256,8 @@
         </div>
         <div class="desc">
           <p>[Web Development - Back End]</p>
-            <p>Sistem yang dibuat untuk memenuhi projek mata kuliah. SPPK KOSIN adalah sistem penunjang keputusan untuk membantu mencari kosan
-                yang memenuhi krtiteria terbaik bagi pengguna</p>
+            <p>Sistem yang dibuat untuk memenuhi projek mata kuliah. yang berguna untuk penunjang keputusan untuk membantu mencari kosan
+                terbaik</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Dy2X2TBUewY29_bxKW2ghrXH1acKUpU-/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/dimpurw/KOSIN" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -273,9 +273,7 @@
         </div>
         <div class="desc">
           <p>[Web Development - Full Stack]</p>
-            <P>projek mata kuliah yang mengembangkan Sistem yang mana dibuat untuk membantu master(pengguna app-pemesan) dalam mengerjakan pekerjaan rumah. 
-                CLEANING ART adalah suatu sistem informasi bidang usaha yang memberikan pelayanan
-terhadap majikan atau pengguna jasa ART berbasis website. </P>
+            <P>projek mata kuliah yang mengembangkan Sistem yang mana dibuat untuk membantu master(pengguna app-pemesan) dalam mengerjakan pekerjaan rumah.</P>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Dy2X2TBUewY29_bxKW2ghrXH1acKUpU-/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/cleaningart" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
