--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <div class="desc">
           <p>[Web Development - Back End]</p>
-            <p>Sebuah sistem aplikasi yang dikerjakan dalam projek tugas akhir skripsi yang berfungsi untuk meramalkan permintaan karet dan pengelolaan karet</p>
+            <p>Sebuah sistem aplikasi yang dikerjakan dalam projek tugas akhir skripsi yang berfungsi untuk meramalkan permintaan karet</p>
           <div class="btns">
             <a href="https://drive.google.com/file/d/1Ndfwvk03AC9VbJeCAz2xK1P943sy_EB5/view?usp=sharing/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/FurqonWidaya/SIPPP" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
